[package]
name = "dolos-midnight"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[[bin]]
name = "dolos-midnight"
path = "src/main.rs"

[dependencies]
dolos-core = { path = "../crates/core" }
dolos-redb3 = { path = "../crates/redb3" }

tokio = { version = "1", features = ["rt", "rt-multi-thread", "signal", "macros"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
thiserror = "2"
futures-core = "0.3"
futures-util = "0.3"
async-trait = "0.1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
sha2 = "0.10"
toml = "0.8"
