[package]
name = "dolos-midnight"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[[bin]]
name = "dolos-midnight"
path = "src/main.rs"

[dependencies]
dolos-core = { path = "../crates/core" }
dolos-redb3 = { path = "../crates/redb3" }

tokio = { version = "1", features = ["rt", "rt-multi-thread", "signal", "macros"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
thiserror = "2"
futures-core = "0.3"
futures-util = "0.3"
async-trait = "0.1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
sha2 = "0.10"
toml = "0.8"
tokio-stream = "0.1"
async-stream = "0.3"

# Optional: real Substrate node sync + extrinsic parsing
subxt = { version = "0.44", features = ["reconnecting-rpc-client"], optional = true }
parity-scale-codec = { version = "3.7", optional = true }

# Optional: midnight ledger for real tx parsing (behind subxt-sync)
midnight-ledger = { path = "../../midnight-ledger/ledger", optional = true }
midnight-zswap = { path = "../../midnight-ledger/zswap", optional = true }
midnight-storage-core = { path = "../../midnight-ledger/storage-core", package = "midnight-storage-core", optional = true }
midnight-base-crypto = { path = "../../midnight-ledger/base-crypto", optional = true }

# Optional: midnight crypto for viewing key trial decryption
midnight-transient-crypto = { path = "../../midnight-ledger/transient-crypto", optional = true }
midnight-coin-structure = { path = "../../midnight-ledger/coin-structure", optional = true }
midnight-serialize = { path = "../../midnight-ledger/serialize", optional = true }

[features]
default = []
subxt-sync = ["subxt", "parity-scale-codec", "midnight-ledger", "midnight-zswap", "midnight-serialize", "midnight-storage-core", "midnight-transient-crypto", "midnight-base-crypto"]
midnight-crypto = ["midnight-transient-crypto", "midnight-coin-structure", "midnight-serialize"]
